<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.neighbour_list.DetailsNeighbourActivity">

        <RelativeLayout
            android:id="@+id/relativeImage1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageHeight"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/neighbours_image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/neighbours_name_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="@dimen/margin10dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tailleTextImage"
                android:textStyle="bold"
                android:text="@string/nom"/>

        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/cardiview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin15dp"
            app:layout_constraintTop_toBottomOf="@id/relativeImage1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin5dp">

                <TextView
                    android:id="@+id/neighbours_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textSize="@dimen/cardViewNomTailleText"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/margin10dp"/>

                <ImageView
                    android:id="@+id/CardImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/neighbours_name"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:paddingStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/margin20dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/user_adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/neighbours_name"
                    android:layout_alignBottom="@id/CardImage1"
                    android:layout_toEndOf="@id/CardImage1"
                    android:text="@string/adresse"
                    android:textSize="16sp"
                    android:gravity="bottom"
                    android:layout_marginStart="@dimen/margin15dp"/>

                <ImageView
                    android:id="@+id/CardImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/CardImage1"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:paddingStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/margin20dp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_adresse"
                    android:layout_alignStart="@id/user_adresse"
                    android:layout_alignTop="@id/CardImage2"
                    android:text="@string/telephone" />

                <ImageView
                    android:id="@+id/CardImage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/CardImage2"
                    android:src="@drawable/ic_language"
                    android:paddingStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/margin20dp"/>

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_adresse"
                    android:layout_alignStart="@id/phone"
                    android:layout_alignTop="@id/CardImage3"
                    android:text="@string/facebook"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin15dp"
            app:layout_constraintTop_toBottomOf="@id/cardiview1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin5dp">

                <TextView
                    android:id="@+id/aProposDeMoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/cardViewNomTailleText"
                    android:paddingLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:text="@string/A_propos_de_moi" />

                <TextView
                    android:id="@+id/user_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon_text"
                    android:textSize="14sp"
                    android:layout_below="@id/aProposDeMoi"
                    android:padding="@dimen/margin10dp"
                    android:paddingStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin15dp"
            android:src="@drawable/ic_star_border_white_24dp"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/cardiview1"
            app:layout_constraintEnd_toEndOf="@+id/relativeImage1"
            app:layout_constraintTop_toBottomOf="@id/relativeImage1" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>